# digital-id

./: Anchor.toml  package.json  tsconfig.json
programs/digital-id/: Cargo.toml
programs/digital-id/src/: id.rs  lib.rs
programs/digital-id/src/instructions/profile/: create.rs
programs/digital-id/src/state/: authority.rs  mod.rs
sdk/: DigidIDL.json  package.json
sdk/src/instructions/: createProfile.ts
sdk/src/utils/: constants.ts  helpers.ts  pdas.ts
tests/: logs  package.json
tests/src/: digital-id.ts
