[package]
name = "digital-id"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "digital_id"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
gpl-core = { path = "/home/braeden/play/solana/misc/gpl/programs/gpl_core", features = ["no-entrypoint", "cpi"] }